Fix:Updated spacing of font on fan boost button

--- a/src/components/FanSpeedControl/_FanBoostButton.scss
+++ b/src/components/FanSpeedControl/_FanBoostButton.scss
@@ -10,7 +10,7 @@
     }
 
     .boost-text {
-        font-size: 0.31rem; /* Use rem for scalability */
+        font-size: 0.32rem; /* Use rem for scalability */
         fill: #c268f8;
         transition: fill 0.3s ease; /* Smooth transition for hover effect */
 
